--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -90,6 +90,7 @@
     <p class="footer-copy">&copy; 2025 Mi Sitio Web</p>
   </footer>  
 
-<script src="/js/presupuesto.js"></script>
+<script src="../js/presupuesto.js"></script>
 </body>
 </html>
+
